# google_proto_struct_mwe

./: Cargo.toml  build.rs  general.yml
.github/workflows/: general.yml
protos/: myproto.proto
src/: lib.rs
